# sheethappens

./: .gitignore  CLAUDE.md  README.md  RUNBOOK.md  conftest.py  example_sheet.csv  index.html  nixpacks.toml  overview.md  pyproject.toml  railway.toml  sheethappens.gs
app/: adapter.py  auth_router.py  canvas_client.py  config.py  idempotency.py  main.py  models.py  sheets_client.py
app/canvas/: __init__.py  adapter.py  client.py  errors.py
app/static/: index.html  setup.html
app/static/setup-app/: index.html
app/static/setup-app/assets/: index-Ck2mp_uC.js
frontend/setup/src/: App.jsx
tasks/: hot-fix-1.md  hot-fix-2.md  hot-fix-3.md  hot-fix-4.md  hot-fix-5.md  hot-fix-6.md  hot-fix-7.md  hot-fix-8.md  phase-01-foundation-and-contracts.md  phase-02-canvas-ingestion-and-adapter.md  phase-03-google-sheets-loader.md  phase-04-idempotent-sync-orchestration.md  phase-05-deployment-cron-and-operations.md  phase-06-multi-tenant-oauth-and-scalable-deployment-blueprint.md
tests/: test_adapter.py  test_assignment_adapter.py  test_canvas_client.py  test_idempotency.py  test_sheets_client.py  test_sync.py
